Substruct Version Changelog and Update Notes
===============================================================================

- in progress - VERSION 1.3.x
---------------------------------------

Added:
  1. Lightbox.js for image previews

Updated:
  1. Changed product code length to 100 chars

Upgrade steps:
  1. rake gems:build
  2. rake db:migrate:plugin NAME=substruct



VERSION 1.3 - 08/25/2010
---------------------------------------
Upgraded to Rails 2.3.8, which has been long overdue.

Besides upgrading Rails, I took the time in this release to clean up the 
content editing features and make Substruct a solid blogging and CMS.

There are many subtle UI tweaks which improve the workflow of 
generating content.

Added:
  1. TinyMCE content editor for blogging and product descriptions.
     - Provides much more non-tech friendly way to enter information.
  2. Slick image selector / uploader when editing content from TinyMCE
     - There's an image button that links to an image selection modal, 
       and you may also upload multiple images, then insert one.
  3. Vendored many required gems to simplify installation process.
     - This requires you to run rake gems:build now when deploying.

Updated:
  1. Upgraded to Rails 2.3.8
  2. Refactored the SubModal code and bumped version to 2.0
  3. Many UI tweaks

Removed:
  1. Support for textile in ContentNodes and Product descriptions 
     is out the window. Since we're using a rich content editor it makes
     no sense to support this format any longer. Migrations are included
     to render the textile content, then save back to the database as HTML.

!!! GOTCHAS !!!

Migrations:
  Migration support for Engines in Rails 2.3 is a bit strange.
  There are some upgrade steps below. Ensure to follow them properly.
  Specifically - we need need to use the old-style NUMBERED migrations, 
  not the new timestamped ones.

Code Mixing:
  Automatic "code mixing" for controllers was removed with Rails/Engines 2.3