@@ -24,11 +24,6 @@
 			<%= text_field 'product', 'quantity', :class => 'textInput numeric', :size => 6, :disabled => @product.variations.size > 0  %>
 		</div>
 		<div class="clear"></div>
-		<% if @product.variations.size > 0 %>
-			<div class="hlt" style="padding:10px; text-align:center;">
-				Variations will use price set for the base product by default unless otherwise specified.
-			</div>
-		<% end %>
 
 	</div>
 
@@ -37,8 +32,13 @@
 	<h2>Variations</h2>
 
 	<div class="padLeft">
-
-		<div id="variation_container">
+  	<p class="info">
+  		Variations will use price set for standard product unless otherwise specified.
+  		<br/>
+  		Drag and drop variations to order them.
+  	</p>
+  	
+		<div id="variation_container" class="sortable">
 			<!-- filled with variations -->
 			<%= render :partial => 'variation', :collection => @product.variations %>
 		</div>
@@ -48,8 +48,8 @@
 				link_to_remote 'Add product variation',
 		    	{
 						:url => { :action => "add_variation_ajax" },
-						:loading => "$('add_variation_link').hide(); $('add_variation_indicator').show();",
-		    		:complete => "PRODUCT.set_and_color_boxes(); $('add_variation_link').show(); $('add_variation_indicator').hide();",
+						:loading => "PRODUCT.add_variation_loading();",
+		    		:complete => "PRODUCT.add_variation_complete();",
 					},
 					:class => 'action',
 					:id => 'add_variation_link'
@@ -188,12 +188,44 @@
         Event.observe(box, 'keyup', PRODUCT.color_variation_boxes);
       });
     },
+    add_variation_loading: function() {
+      $('add_variation_link').hide(); 
+      $('add_variation_indicator').show();
+    },
+    add_variation_complete: function() {
+      PRODUCT.set_and_color_boxes();
+      PRODUCT.make_variations_sortable();
+      $('add_variation_link').show(); 
+      $('add_variation_indicator').hide();
+    },
+    // Creates sortable on the variations container so we can drag/drop them
+    make_variations_sortable: function() {
+      Sortable.create(
+        'variation_container',
+        {
+          tag: 'div',
+          onUpdate: PRODUCT.update_variation_rank
+        }
+      );
+    },
+    // Run when variation is dragged / dropped.
+    // Updates the hidden input for rank on the variation,
+    // which is saved on product save.
+    update_variation_rank: function(container) {
+      var sort_items = container.select("div.variation.sort_item");
+      for (var i=0; i<sort_items.length; i++) {
+        variation = sort_items[i];
+        rank_box = variation.select("input[name='variation[][variation_rank]']")[0];
+        rank_box.value = i;
+      }
+    },
     // Adds event handlers to variation boxes
     init: function() {
       PRODUCT.original_price = $('product_price').getAttribute('original_value');
       Event.observe($('product_price'), 'keyup', PRODUCT.change_price);
       PRODUCT.set_and_color_boxes();
       PRODUCT.observe_boxes();
+      PRODUCT.make_variations_sortable();
     }
   };
   PRODUCT.init();
