@@ -1,5 +1,6 @@
-<div class="variation">
+<div class="variation sort_item" id="variation_<%= variation.id %>">
 	<input type="hidden" name="variation[][id]" value="<%= variation.id %>" />
+	<input type="hidden" name="variation[][variation_rank]" value="<%= variation.variation_rank %>" />
 	<div class="float">
 		<%= make_label('Name', true) %>
 		<%= text_field_tag('variation[][name]', variation.short_name, :size => 30, :class => 'textInput') %>
@@ -24,8 +25,9 @@
 		<br/>
 		<span class="info">(pounds)</span>
 	</div>
+	
 	<!-- remove link -->
-	<div style="float:right;margin-top:20px;">
+	<div style="position:absolute;margin-left:625px;">
 		<%= 
 			link_to_remote image_tag("icons/png-24/16-em-cross.png", :plugin => 'substruct', :alt => 'Delete'),
 	    	{
@@ -37,5 +39,6 @@
 		%>
 		<%= image_tag("/indicator.gif", :plugin => 'substruct', :style => 'display:none;', :id => "variation_indicator_#{variation.id}") %>
 	</div>
+	
 	<div class="clear"></div>
 </div>
